# malsori

./: .dockerignore  .gitignore  AGENTS.MD  AGENTS.md  README.md
docs/: README.md  ops-service-worker-cache-playbook.md  perf-mobile-background-2026-03-05.md  perf-webapp-bundle-2026-02-19.md  perf-webapp-bundle-2026-03-03.md  plan-admin-boundary-reconnect-resilience-2026-03-06.md  plan-architecture-boundary-refactor-2026-05-11.md  plan-feature-backend-binding-2026-03-10.md  plan-history-reset-2026-03-08.md  plan-operator-feature-activation-2026-03-11.md  plan-p0-default-presets-i18n.md  plan-p0-drive-auth-broker.md  plan-p0-service-errors-i18n.md  plan-p0-strings-iconbuttons.md  plan-p0-ux.md  plan-p1-drive-ux.md  plan-p1-realtime-settings-i18n.md  plan-p1-ui-refresh.md  plan-platform-expansion-rollout-2026-03-10.md  todo-workflow.md  (+13 more)
python_api/: Dockerfile  pyproject.toml
python_api/api_server/: __init__.py  backend_bindings_store.py  config.py  feature_binding_runtime.py  google_drive_oauth.py  main.py  models.py  provider_runtime.py  stt_client.py
python_api/api_server/protos/: __init__.py  vito-stt-client.proto  vito_stt_client_pb2.py  vito_stt_client_pb2_grpc.py
python_api/tests/: conftest.py  test_backend_admin.py  test_backend_profile_health.py  test_config_override.py  test_feature_binding_runtime.py  test_full_summary_execution.py  test_google_drive_oauth.py  test_post_deploy_ui_smoke.py  test_provider_runtime.py  test_public_cors.py  test_streaming_terminal_errors.py  test_stt_client.py  test_transcribe_queue.py  test_translate_final_turn_execution.py
(+405 files in other folders)
