[project]
name = "malsori-python-api"
version = "0.1.0"
description = "FastAPI wrapper that proxies RTZR STT APIs for the malsori webapp."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "requests>=2.31",
  "websockets>=12.0",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_server"]

[tool.uv]
package = false
